kubernetes-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sonali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: tutulchakma/sonali-api:latest
        ports:
          - containerPort: 9090
        env:   # ⬅️ ADD THIS so ASP.NET listens correctly
          - name: ASPNETCORE_URLS
            value: "http://+:9090"
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sonali
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30909
